# chaoseq

./: CMakeLists.txt  README.md  imgui.ini
include/: Camera.hpp  Integrator.hpp  ODESystems.hpp  Shader.hpp  glitter.hpp  simulation.hpp  ui.hpp
shader/: basic.frag  basic.vert  particle.frag  particle.vert
src/: main.cpp  simulation.cpp  ui.cpp
src/.cache/clangd/index/: main.cpp.3938473B27587C0D.idx  main.cpp.EB5A2B8E11207525.idx
